...

  <string name="login_fragment_label">Login</string>
  <string name="game_fragment_label">Tic Tac Toe: Game</string>
  <string name="dashboard_fragment_label">Tic Tac Toe: Dashboard</string>

  <string name="login">Log In</string>
  <string name="logout">Log Out</string>

  <string name="new_game">New Game</string>
  <string name="email">Email</string>
  <string name="password">Password</string>

  <string name="blank"> </string>

  <string name="new_game_dialog_message">Which type of game do you want to create?</string>
  <string name="forfeit_game_dialog_message">Are you sure you want to forfeit this game?</string>

  <string name="two_player">Two-Player</string>
  <string name="one_player">One-Player</string>

  <string name="yes">Yes</string>
  <string name="cancel">Cancel</string>
  <string name="confirm">Confirm</string>

  <string name="register">Register</string>
...
  <string name="your_turn">Your turn</string>
  <string name="you_win">You Win!</string>
  <string name="you_lose">You Lose!</string>
  <string name="draw">Draw!</string>
  <string name="go_back">BACK</string>

  <string name="ok">OK</string>
  <string name="congratulations">Congratulations!</string>
  <string name="sorry">Sorry!</string>
  <string name="waiting">Waiting...</string>
  <string name="quit">QUIT</string>
</resources>
