...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginFragment">

  <EditText
      android:id="@+id/edit_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/text_margin"
      android:autofillHints="@string/email"
      android:hint="  Email"
      android:inputType="textEmailAddress"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      android:minHeight="48dp"
      android:background="@drawable/rounded_edittext"
      app:layout_constraintBottom_toTopOf="@+id/edit_password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed" />

...
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/btn_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@color/blue"/>
  </LinearLayout>
...
