...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_black_dark_blue_stoke">

      <TextView
          android:id="@+id/won_score"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="0"
          android:textSize="32sp"
          android:textStyle="bold"
          android:textColor="@android:color/white"
...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:background="@drawable/round_back_dark_blue_20">

      <TextView
          android:id="@+id/lost_score"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="0"
          android:textSize="32sp"
          android:textStyle="bold"
          android:textColor="@android:color/white"
...
        android:layout_height="wrap_content"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/fragment_item" />
  </LinearLayout>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab_new_game"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentEnd="true"
      android:layout_margin="20dp"
      android:contentDescription="@string/new_game"
...
